Added link to GitHub

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
             <h5>14</h5>
           </div>
         </div>
-      </div>
+    </div>
+    <div>
+  <p><a href="https://github.com/amycolv/Weather_app">Open-sourced code</a> by Amy Colville</p>
     </div>
     <script src="src/script.js"></script>
   </body>
